cmake_minimum_required(VERSION 2.8)
project( 7pt )
find_package( OpenCV 3 REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( show_img show_img.cpp )
add_executable( features features.cpp )
add_executable( matches matches.cpp )
add_executable( fundamental fundamental.cpp )
target_link_libraries( show_img ${OpenCV_LIBS} )
target_link_libraries( features ${OpenCV_LIBS} )
target_link_libraries( matches ${OpenCV_LIBS} )
target_link_libraries( fundamental ${OpenCV_LIBS} )
set(CMAKE_BUILD_TYPE RelWithDebInfo)
